<resources>
    <string name="app_name">My Application</string>

    //GLOBAL
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="v_password">Verifica Password</string>
    <string name="send">Send</string>

    //LOGIN
    <string name="login">Login</string>
    <string name="login2">Inserire username e password per accedere</string>
    //ENDLOGIN
    <string name="home">Home</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>

    //ENDGLOBAL

    <string name="not_yet_registered">Non ancora registrato ?</string>
    <string name="register_now">Registrati</string>
    <string name="login_failed">I dati inseriti sono errati</string>
    <string name="missing_data">Inserisci i tuoi dati</string>

    //Activity_Register
    <string name="registrazione_1">Registrazione</string>
    <string name="registrazione_2">Compila tutti i campi per registrarti</string>
    <string name="sesso">Sesso</string>
    <string name="missingData">Non hai compilato tutti i campi</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="home_studente">Home Studente</string>
    <string name="home_segreteria">Home Segreteria</string>
    <string name="home_admin">Home Admin</string>
    <string name="non_ancora_registrato">Non ancora registrato?</string>
    <string name="logo">logo</string>
    <string name="id">ID</string>
    <string name="data_rilascio">Data rilascio</string>
    <string name="data_scadenza">Data scadenza</string>
    <string name="inoltra">Inoltra</string>
    <string name="anno">Anno</string>
    <string name="livello">Livello</string>
    <string name="seriale">Seriale</string>
    <string name="cfu_da_validare">CFU da validare</string>
    <string name="studente">Studente</string>
    <string name="richiesta">Richiesta</string>
    <string name="anno_accademico">Anno Accademico</string>
    <string name="matricola">Matricola</string>
    <string name="ente">Ente</string>
    <string name="ente_di_rilascio">Ente di rilascio</string>
    <string name="cfu_da_conseguire">CFU da conseguire</string>
    <string name="invia">Invia</string>
    <string name="anno_di_immatricolazione">Anno di immatricolazione</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="inserisci_richiesta">Inserisci richiesta</string>
    <string name="logout">Logout</string>
    <string name="guida">Guida</string>
    <string name="richieste_approvate">Richieste Approvate</string>
    <string name="richieste_rifiutate">Richieste Rifiutate</string>
    <string name="rifiuta">RIFIUTA</string>
    <string name="approva">APPROVA</string>
    //End Activity_Register

    //SPINNER ENTE
    <string-array name="enti">
        <item>Cambridge Assessment English</item>
        <item>City and Guilds (Pitman)</item>
        <item>Edexcel /Pearson Ltd </item>
        <item>Educational Testing Service (ETS)</item>
        <item>English Speaking Board (ESB)</item>
        <item>International English Language Testing System (IELTS)</item>
        <item>Pearson - LCCI</item>
        <item>Pearson - EDI</item>
        <item>Trinity College London (TCL)</item>
        <item>Department of English, Faculty of Arts - University of Malta</item>
        <item>NQAI - ACELS</item>

    </string-array>

    //SPINNER CFU
    <string-array name="cfu">
        <item>3</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_approved">ApprovedActivity</string>
    <string name="cfu_validati">CFU validati</string>
    <string name="aggiungi_cfu">aggiungi CFU</string>
    <string name="richieste_già_effettuata">Richiesta già inviata</string>
    <string name="scarica_allegati">Scarica allegati</string>
    <string name="stato">Stato</string>

</resources>
