<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option1"
        android:title="@string/modifica_profilo"
        app:showAsAction="never" />
    <item
        android:id="@+id/option2"
        android:title="@string/inserisci_richiesta"
        app:showAsAction="never" />

    <item
        android:id="@+id/option3"
        android:title="@string/guida"
        app:showAsAction="never" />

    <item
        android:id="@+id/option4"
        android:title="Download"
        app:showAsAction="never" />

    <item
        android:id="@+id/option5"
        android:title="Upload"
        app:showAsAction="never" />


    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>