<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestioneStudente.RequestForm">



    <TextView
        android:id="@+id/boxContainer2"
        android:layout_width="381dp"
        android:layout_height="455dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"></TextView>

    <Spinner
        android:id="@+id/spinner_ente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/enti"
        android:gravity="center"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMatricola" />

    <Spinner
        android:id="@+id/spinner_cfu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:entries="@array/cfu"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_livello" />

    <EditText
        android:id="@+id/et_livello"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/livello"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_seriale" />

    <EditText
        android:id="@+id/et_seriale"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/seriale"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_scadenza" />

    <EditText
        android:id="@+id/etAnno"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/anno_di_immatricolazione"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReg2" />

    <TextView
        android:id="@+id/tvReq1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/richiesta"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/boxContainer2" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btSendForm"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxContainer2" />

    <EditText
        android:id="@+id/etMatricola"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/matricola"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnno" />

    <TextView
        android:id="@+id/tvReg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrazione_2"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReq1" />

    <Button
        android:id="@+id/btSendForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/invia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxContainer2"
        app:layout_constraintVertical_bias="0.748" />

    <EditText
        android:id="@+id/etRelease"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/data_rilascio"
        android:focusable="false"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ente"  />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/tvReq1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_standard" />

    <FrameLayout

        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFF"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/richieste_già_effettuata"
            android:textSize="24sp" />


    </FrameLayout>

    <EditText
        android:id="@+id/et_scadenza"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/data_scadenza"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRelease" />


</androidx.constraintlayout.widget.ConstraintLayout>